--- a/apps/templates/includes/sidenav.html
+++ b/apps/templates/includes/sidenav.html
@@ -1,107 +1,154 @@
 <nav class="sidenav navbar navbar-vertical  fixed-left  navbar-expand-xs navbar-light bg-white" id="sidenav-main">
-  <div class="scrollbar-inner">
-    <!-- Brand -->
-    <div class="sidenav-header  align-items-center">
-      <a class="navbar-brand" href="/">
-        <img src="/static/assets/img/brand/logo_amc.png" class="navbar-brand-img" alt="">
-      </a>
+    <div class="scrollbar-inner">
+        <!-- Brand -->
+        <div class="sidenav-header  align-items-center">
+            <a class="navbar-brand" href="/">
+                <img src="/static/assets/img/brand/logo_amc.png" class="navbar-brand-img" alt="">
+            </a>
+        </div>
+        <div class="navbar-inner">
+            <!-- Collapse -->
+            <div class="collapse navbar-collapse" id="sidenav-collapse-main">
+                <!-- Nav items -->
+                <ul class="navbar-nav">
+
+                    <li class="nav-item">
+                        <a class="nav-link {% if 'index' in segment %} active {% endif %}" href="/">
+                            <i class="ni ni-tv-2 text-secondary"></i>
+                            <span class="nav-link-text">Dashboard</span>
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link {% if 'icons' in segment %} active {% endif %}" href="/admin/amcm/evento/">
+                            <i class="ni ni-trophy text-secondary"></i>
+                            <span class="nav-link-text">Clásicos, Derbys, Futuritys</span>
+                        </a>
+                    </li>
+
+                    {#                    <li class="nav-item">#}
+                    {#                        <a class="nav-link {% if 'tables' in segment %} active {% endif %}" href="/admin/amcm/cuotas/">#}
+                    {#                            <i class="fas fa-money-check-alt text-secondary"></i>#}
+                    {#                            <span class="nav-link-text">Cuotas</span>#}
+                    {#                        </a>#}
+                    {#                    </li>#}
+
+                    <li class="nav-item">
+                        <a class="nav-link  {% if 'page-' in segment %} active {% endif %}"
+                           href="#navbar-dashboards" data-toggle="collapse" role="button" aria-expanded="false"
+                           aria-controls="navbar-dashboards">
+                            <i class="fas fa-file-invoice text-secondary"></i>
+                            <span class="nav-link-text">Catálogos</span>
+                        </a>
+                        <div class="collapse" id="navbar-dashboards">
+                            <ul class="nav nav-sm flex-column">
+                                <li class="nav-item">
+                                    <a href="/" class="nav-link {% if 'index' in segment %} active {% endif %}">
+                                        {#                                        <span class="sidenav-mini-icon"> D </span>#}
+                                        <span class="sidenav-normal"> Descuentos </span>
+                                    </a>
+                                </li>
+                                <li class="nav-item">
+                                    <a href="/alternative.html"
+                                       class="nav-link {% if 'alternative' in segment %} active {% endif %}">
+                                        {#                                        <span class="sidenav-mini-icon"> A </span>#}
+                                        <span class="sidenav-normal"> Tipo de Cuota </span>
+                                    </a>
+                                </li>
+                                <li class="nav-item">
+                                    <a href="/alternative.html"
+                                       class="nav-link {% if 'alternative' in segment %} active {% endif %}">
+                                        {#                                        <span class="sidenav-mini-icon"> A </span>#}
+                                        <span class="sidenav-normal"> Tipo de Evento </span>
+                                    </a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link {% if 'index' in segment %} active {% endif %}"
+                                       href="/admin/amcm/registrocuotaevento/">
+
+                                        <span class="nav-link-text">Cuotas</span>
+                                    </a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="/admin/amcm/cuadras/">
+
+                                        <span class="nav-link-text">cuadras</span>
+                                    </a>
+                                </li>
+                                <li class="nav-item">
+                                    <a href="/alternative.html"
+                                       class="nav-link {% if 'alternative' in segment %} active {% endif %}">
+                                        {#                                        <span class="sidenav-mini-icon"> A </span>#}
+                                        <span class="sidenav-normal"> Nacionalidad </span>
+                                    </a>
+                                </li>
+
+                                <li class="nav-item">
+                                    <a href="/alternative.html"
+                                       class="nav-link {% if 'alternative' in segment %} active {% endif %}">
+                                        {#                                        <span class="sidenav-mini-icon"> A </span>#}
+                                        <span class="sidenav-normal"> ejemplares </span>
+                                    </a>
+                                </li>
+                            </ul>
+                        </div>
+                    </li>
+
+                    <li class="nav-item">
+                        <a class="nav-link {% if 'map' in segment %} active {% endif %}" href="/map.html">
+                            <i class="ni ni-circle-08 text-secondary"></i>
+                            <span class="nav-link-text">Asistentes</span>
+                        </a>
+                    </li>
+                    {#                    <li class="nav-item">#}
+                    {#                        <a class="nav-link {% if 'profile' in segment %} active {% endif %}" href="/profile.html">#}
+                    {#                            <i class="fas fa-horse-head text-secondary"></i>#}
+                    {#                            <span class="nav-link-text">Ejemplares</span>#}
+                    {#                        </a>#}
+                    {#                    </li>#}
+                    {#        <li class="nav-item">#}
+                    {#            <a class="nav-link {% if 'index' in segment %} active {% endif %}" href="/admin/amcm/evento/">#}
+                    {#              <i class="fas fa-calendar-alt text-secondary"></i>#}
+                    {#              <span class="nav-link-text">Evento</span>#}
+                    {#            </a>#}
+                    {#          </li>#}
+                    <li class="nav-item">
+                        <a class="nav-link" href="">
+                            <i class="fas fa-percentage text-secondary"></i>
+                            <span class="nav-link-text">Paquetes de descuento</span>
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/registro_pagos/">
+                            <i class="fas fa-file-invoice text-secondary"></i>
+                            <span class="nav-link-text">Registro de pagos</span>
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="">
+                            <i class="fas fa-chart-line text-secondary"></i>
+                            <span class="nav-link-text">Reportes</span>
+                        </a>
+                    </li>
+                </ul>
+                <!-- Divider -->
+                <hr class="my-3">
+                <!-- Heading -->
+                {#        <h6 class="navbar-heading p-0 text-muted">#}
+                {#          <span class="docs-normal">Registro de pagos</span>#}
+                {#        </h6>#}
+                <!-- Navigation -->
+                <ul class="navbar-nav mb-md-3">
+
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'logout' %}">
+                            <i class="fas fa-sign-out-alt text-secondary"></i>
+                            <span class="nav-link-text">Salir</span>
+                        </a>
+                    </li>
+
+
+                </ul>
+            </div>
+        </div>
     </div>
-    <div class="navbar-inner">
-      <!-- Collapse -->
-      <div class="collapse navbar-collapse" id="sidenav-collapse-main">
-        <!-- Nav items -->
-        <ul class="navbar-nav">
-
-          <li class="nav-item">
-            <a class="nav-link {% if 'index' in segment %} active {% endif %}" href="/">
-              <i class="ni ni-tv-2 text-secondary"></i>
-              <span class="nav-link-text">Dashboard</span>
-            </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link {% if 'icons' in segment %} active {% endif %}" href="/icons.html">
-              <i class="ni ni-trophy text-secondary"></i>
-              <span class="nav-link-text">Clásicos, Derbys, Futuritys</span>
-            </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link {% if 'map' in segment %} active {% endif %}" href="/map.html">
-              <i class="ni ni-circle-08 text-secondary"></i>
-              <span class="nav-link-text">Asistentes</span>
-            </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link {% if 'profile' in segment %} active {% endif %}" href="/profile.html">
-             <i class="fas fa-horse-head text-secondary"></i>
-              <span class="nav-link-text">Ejemplares</span>
-            </a>
-          </li>
-        <li class="nav-item">
-            <a class="nav-link {% if 'index' in segment %} active {% endif %}" href="/admin/amcm/evento/">
-              <i class="fas fa-calendar-alt text-secondary"></i>
-              <span class="nav-link-text">Evento</span>
-            </a>
-          </li>
-
-          <li class="nav-item">
-            <a class="nav-link {% if 'index' in segment %} active {% endif %}" href="/admin/amcm/registrocuotaevento/">
-              <i class="fas fa-wallet text-secondary"></i>
-              <span class="nav-link-text">Registro Cuotas</span>
-            </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link {% if 'tables' in segment %} active {% endif %}" href="/admin/amcm/cuotas/">
-              <i class="fas fa-money-check-alt text-secondary"></i>
-              <span class="nav-link-text">Cuotas</span>
-            </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="">
-             <i class="fas fa-percentage text-secondary"></i>
-              <span class="nav-link-text">Paquetes de descuento</span>
-            </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="">
-             <i class="fas fa-chart-line text-secondary"></i>
-              <span class="nav-link-text">Reportes</span>
-            </a>
-          </li>
-
-          <li class="nav-item">
-            <a class="nav-link" href="/admin/amcm/cuadras/">
-             <i class="far fa-file-alt text-secondary"></i>
-              <span class="nav-link-text">Registro de cuadras</span>
-            </a>
-          </li>
-
-        <li class="nav-item">
-            <a class="nav-link" href="/registro_pagos/">
-              <i class="fas fa-file-invoice text-secondary"></i>
-              <span class="nav-link-text">Registro de pagos</span>
-            </a>
-          </li>
-
-        </ul>
-        <!-- Divider -->
-        <hr class="my-3">
-        <!-- Heading -->
-{#        <h6 class="navbar-heading p-0 text-muted">#}
-{#          <span class="docs-normal">Registro de pagos</span>#}
-{#        </h6>#}
-        <!-- Navigation -->
-        <ul class="navbar-nav mb-md-3">
-
-          <li class="nav-item">
-            <a class="nav-link" href="{% url 'logout' %}">
-             <i class="fas fa-sign-out-alt text-secondary"></i>
-              <span class="nav-link-text">Salir</span>
-            </a>
-          </li>
-
-
-        </ul>
-      </div>
-    </div>
-  </div>
 </nav>
