--- a/apps/amcm/templates/amcm/recibo_PDF.html
+++ b/apps/amcm/templates/amcm/recibo_PDF.html
@@ -1,100 +1,12 @@
 <!DOCTYPE html>
 <html lang="es">
-
 <head>
-
     <title>
         AMCM - {% block title %}  {% endblock %}
     </title>
-    <style type="text/css">
-        body {
-            height: 842px;
-            width: 680px;
-            /* to centre page on screen*/
-            margin-left: auto;
-            margin-right: auto;
-            font-family: Arial, Helvetica, sans-serif;
-            font-size: 17px;
-            font-weight: normal;
-            -webkit-print-color-adjust: exact;
-        }
-
-        @page {
-            size: letter portrait;
-            margin: 3cm;
-            background-image: url('http://127.0.0.1:8000/static/admin/img/recibohippodromo.jpg');
-            -webkit-print-color-adjust: exact;
-
-        table {
-            -pdf-keep-with-next: true;
-            height: 100pt
-        }
-
-        @frame header_frame {
-            /* Static Frame */
-            -pdf-frame-content: header_content;
-            left: 50pt;
-            width: 512pt;
-            top: 90pt;
-            height: 500pt;
-        }
-        @frame content_frame {
-            /* Content Frame */
-            left: 50pt;
-            width: 512pt;
-            top: 120pt;
-            height: 632pt;
-        }
-        @frame footer_frame {
-            /* Another static Frame */
-            -pdf-frame-content: footer_content;
-            left: 50pt;
-            width: 512pt;
-            top: 732pt;
-            height: 300pt;
-        }
-        }
-    </style>
-    <style type="text/css">
-        @page {
-            size: letter portrait;
-            margin: 3cm;
-            background-image: url('http://127.0.0.1:8000/static/admin/img/recibohippodromo.jpg');
-            -webkit-print-color-adjust: exact;
-
-        table {
-            -pdf-keep-with-next: true;
-            height: 100pt
-        }
-
-        @frame header_frame {
-            /* Static Frame */
-            -pdf-frame-content: header_content;
-            left: 50pt;
-            width: 512pt;
-            top: 90pt;
-            height: 500pt;
-        }
-        @frame content_frame {
-            /* Content Frame */
-            left: 50pt;
-            width: 512pt;
-            top: 120pt;
-            height: 632pt;
-        }
-        @frame footer_frame {
-            /* Another static Frame */
-            -pdf-frame-content: footer_content;
-            left: 50pt;
-            width: 512pt;
-            top: 732pt;
-            height: 300pt;
-        }
-        }
-    </style>
 </head>
 
-<body class="">
+<body class="" style="background-image: url('/static/admin/img/recibohippodromo.jpg');">
 
 {% block content %}
     <div style="text-align: right;width: 580px; height: 792px; position: relative">
@@ -144,16 +56,10 @@
             00 <span style="font-size: 12px">&nbsp; $13,123</span></p>
         </div>
     </div>
-    <div class="container-fluid my-3 py-3">
-        <div class="row">
-            <div class="col-md-10 col-lg-8 col-sm-10 mx-auto">
-                <div style="position: absolute;top: 0;z-index: -1;">
-                    <img src="http://127.0.0.1:8000/static/admin/img/recibohippodromo.jpg" class="img-fluid"
+     <div style="position: absolute;top: 0;z-index: -1;">
+                    <img src="/admin/img/recibohippodromo.jpg" class="img-fluid"
                          style="width: 612px;height: 792px;opacity: 1;">
                 </div>
-            </div>
-        </div>
-    </div>
 {% endblock content %}
 
 </body>
