--- a/apps/templates/home/index.html
+++ b/apps/templates/home/index.html
@@ -40,7 +40,7 @@
                             <div class="card-body">
                                 <div class="row">
                                     <div class="col">
-                                        <h5 class="card-title text-uppercase text-muted mb-0">Total traffic</h5>
+                                        <h5 class="card-title text-uppercase text-muted mb-0">Total Eventos</h5>
                                         <span class="h2 font-weight-bold mb-0">350,897</span>
                                     </div>
                                     <div class="col-auto">
@@ -59,7 +59,7 @@
                             <div class="card-body">
                                 <div class="row">
                                     <div class="col">
-                                        <h5 class="card-title text-uppercase text-muted mb-0">New users</h5>
+                                        <h5 class="card-title text-uppercase text-muted mb-0">Total Cuadras</h5>
                                         <span class="h2 font-weight-bold mb-0">2,356</span>
                                     </div>
                                     <div class="col-auto">
@@ -78,7 +78,7 @@
                             <div class="card-body">
                                 <div class="row">
                                     <div class="col">
-                                        <h5 class="card-title text-uppercase text-muted mb-0">Sales</h5>
+                                        <h5 class="card-title text-uppercase text-muted mb-0">Total Ejemplares</h5>
                                         <span class="h2 font-weight-bold mb-0">924</span>
                                     </div>
                                     <div class="col-auto">
@@ -97,7 +97,7 @@
                             <div class="card-body">
                                 <div class="row">
                                     <div class="col">
-                                        <h5 class="card-title text-uppercase text-muted mb-0">Performance</h5>
+                                        <h5 class="card-title text-uppercase text-muted mb-0"></h5>
                                         <span class="h2 font-weight-bold mb-0">49,65%</span>
                                     </div>
                                     <div class="col-auto">
