--- a/apps/amcm/templates/amcm/reporte.html
+++ b/apps/amcm/templates/amcm/reporte.html
@@ -87,7 +87,7 @@
                     </span>
                   </td>
                   <td>
-                    <a href="/reporte-cuota/?id={{ obj.id }}">
+                    <a href="/amcm/reporte-cuota/?id={{ obj.id }}">
                       <button type="button" class="btn btn-outline-secondary btn-sm">
                           <i class="fas fa-file-invoice-dollar"></i>
                       </button>
@@ -192,9 +192,11 @@
                     </span>
                   </td>
                   <td>
+                      <a href="/amcm/reporte-cuota/?id={{ obj.id }}">
                       <button type="button" class="btn btn-outline-secondary btn-sm">
                           <i class="fas fa-file-invoice-dollar"></i>
                       </button>
+                          </a>
 
                   </td>
                   <td class="text-right">
@@ -223,7 +225,7 @@
       <div class="col">
         <div class="card">
           <div class="card-header border-0">
-            <h3 class="mb-0">CLASICO</h3>
+            <h3 class="mb-0">CLÁSICO</h3>
           </div>
           <div class="table-responsive">
               <table class="table align-items-center table-flush">
@@ -270,9 +272,11 @@
                     </span>
                   </td>
                   <td>
+                      <a href="/amcm/reporte-cuota/?id={{ obj.id }}">
                       <button type="button" class="btn btn-outline-secondary btn-sm">
-                          <i class="fas fa-file-invoice-dollar"></i>
+                          <i class="fa fa-file-invoice-dollar fa-2x"></i>
                       </button>
+                      </a>
 
                   </td>
                   <td class="text-right">
