--- a/apps/templates/home/index.html
+++ b/apps/templates/home/index.html
@@ -326,13 +326,13 @@
                             <div class="col">
                                 <h3 class="mb-0">Recibos por Cuotas</h3>
                             </div>
-                        s    <div class="col text-right">
+                            <div class="col text-right">
                                 <a href="#!" class="btn btn-sm btn-primary">Ver todo</a>
                             </div>
                         </div>
                     </div>
                     <div class="card widget-calendar">
-                        <table class="table align-items-center table-flush" id="result_list_rr">
+                        <table class="table table-hover table-striped w-100" id="result_list_rr">
                             <thead class="thead-light">
                             <tr>
                                 <th scope="col">Evento</th>
@@ -342,8 +342,11 @@
                             </tr>
                             </thead>
                             <tbody>
-
-
+                                <tr>
+                                    <th scope="col"></th>
+                                    <th scope="col"></th>
+                                    <th scope="col"></th>
+                                </tr>
                             </tbody>
                         </table>
                         <div data-toggle="widget-calendar"></div>
@@ -364,21 +367,22 @@
                         </div>
                     </div>
                     <div class="card-body">
+                         <div class="table-responsive pb-8">
+                            <table class="table table-hover table-striped w-100" id="result_list_en">
+                                <thead class="thead-light">
+                                <tr>
+                                    <th scope="col">Evento</th>
+                                    <th scope="col">Ejemplares</th>
+                                    <th scope="col">Elegibles del</th>
 
-                        <table class="table align-items-center table-flush" id="result_list_en">
-                            <thead class="thead-light">
-                            <tr>
-                                <th scope="col">Evento</th>
-                                <th scope="col">Ejemplares</th>
-                                <th scope="col">Elegibles del</th>
-
-                            </tr>
-                            </thead>
-                            <tbody>
+                                </tr>
+                                </thead>
+                                <tbody>
 
 
-                            </tbody>
-                        </table>
+                                </tbody>
+                            </table>
+                         </div>
                         <div class="chart">
                           <!-- Chart wrapper -->
                           <canvas id="chart-doughnut" class="chart-canvas"></canvas>
